--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -25,7 +25,8 @@
     "graphql": "^14.6.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "web3": "^1.2.9"
   },
   "devDependencies": {
     "@testing-library/dom": "^6.12.2",
